Fixing some alignment  issue in the footer.

--- a/styles/main.css
+++ b/styles/main.css
@@ -300,9 +300,11 @@ body {
     align-items: center;
     align-self: stretch;
     height: fit-content;
-
+    position: relative;
+    bottom: 0;
+    left: 0;
     .number {
-      position: relative;
+      position: absolute;
       bottom: -10.5rem;
       .circle {
         background: var(--white);
@@ -310,7 +312,7 @@ body {
     }
     .footer-hero {
       position: absolute;
-      bottom: -122.7rem;
+      bottom: -41.7rem;
       z-index: -2;
       background: url(../assets/mobile/image-footer.jpg) lightgray 50% -2% / cover
         no-repeat;
